[tool.poetry]
name = "kyrexo-noha"
version = "0.1.0"
description = "Kyrexo: The ultimate development platform | Noha: The intuitive programming language that translates natural language into executable code."
authors = ["Nevin Shime <nevinshine@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"  # Adjust the version depending on your Python version
# Add your dependencies here
# For example:
# requests = "^2.25.1"

[tool.poetry.dev-dependencies]
# Add your development dependencies here, for example:
# pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
